--- a/.github/workflows/workflow-file.yml
+++ b/.github/workflows/workflow-file.yml
@@ -1,11 +1,12 @@
+name: CI
 on: [push]
 jobs:
  build:
- name: PrimeroJob
- runs-on: ubuntu-latest
- steps:
- - uses: actions/checkout@v2
- - name: Executando o STEP1
- run: |
- echo Esse processo carrega uma mensagem
- echo basica para entender o workflow
+  name: PrimeroJob
+  runs-on: ubuntu-latest
+  steps:
+   - uses: actions/checkout@v4
+   - name: Executando o STEP1
+     run: |
+       echo Esse processo carrega uma mensagem,
+       echo basica para entender o workflow
